# JenkinsTest

./: CMakeLists.txt  Jenkinsfile  premake5.lua
Boost.Test/: test.cpp
HelloWorld/: HelloWorld.cpp  HelloWorld.h
HelloWorld/src/: HelloWorld.cpp  Test
OpenCV/: CMakeLists.txt  image.cpp
scripts/: Linux-Build.sh  Linux-Run.sh
